--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ corner==2.0.1
 matplotlib==2.2.0
 numpy==1.14.1
 scikit-learn==0.19.1
+scipy==1.0.0
+treeinterpreter==0.2.1
+scikit-garden==0.1.3
+Cython==0.28
