--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ scipy==1.0.0
 matplotlib==2.2.0
 astropy==3.0
 scikit-learn==0.19.1
-scikit-garden==0.1.3
 corner==2.0.1
 treeinterpreter==0.2.1
+# scikit-garden==0.1.3
