--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Cython==0.28
-numpy==1.14.1
-scipy==1.0.0
-matplotlib==2.2.0
-astropy==3.0
-scikit-learn==0.19.1
-corner==2.0.1
-treeinterpreter==0.2.1
-# scikit-garden==0.1.3
+Cython>=0.28
+numpy>=1.14.1
+scipy>=1.0.0
+matplotlib>=2.2.0
+astropy>=3.0
+scikit-learn>=0.19.1
+corner>=2.0.1
+treeinterpreter>=0.2.1
+scikit-garden>=0.1.3
+jupyter>=1.0.0
